docs/tests/typing/bad/testfile-undef_var-3.cpp

int main(int x) { }
void n() { x; }

